# BLOCK14PG

./: .gitignore  CMakeLists.txt  README.md  package-lock.json
.cache/clangd/index/: Block.cpp.FC6AA79367573C43.idx  Block.h.A2831B1B8ACF2648.idx  BlockCompress.cpp.9D40BC1CBD55EAEB.idx  BlockCompress.h.CFF04BE7A1E0B07E.idx  BlockCompressTest.cpp.C369A208BB94A9D7.idx  Buffer.cpp.17E8D4C6F3A57253.idx  Buffer.h.AF07DE7E27BB8979.idx  Compressor.cpp.4146B63A37CFD5BC.idx  Compressor.h.F1A90809E23F8B17.idx  Cuboid.cpp.51539A318D139D75.idx  Cuboid.h.BB1E29FE5B010A2E.idx  InputTestHelper.cpp.7A440BD502E251B8.idx  InputTestHelper.h.074BAC4596BA4BCE.idx  IntegrationTestHelper.h.48278ADC1A4037DD.idx  LineCompress.cpp.B6C6352267E11FFA.idx  MultiThreadsHandler.cpp.E0C42A9CE87EDD84.idx  MultiThreadsHandler.h.8D3FCF93A7044C1D.idx  PlaneCompress.cpp.91EB85E87648F05E.idx  SafeInputTasks.cpp.FC7391581D3FAF78.idx  SafeInputTasks.h.99D6B2A65EEC7367.idx  SafeOutputTasks.cpp.930954D2A88C68DF.idx  SafeOutputTasks.h.85B89602EC24D33C.idx  ThreadPool.h.EFC13B53EF7CE302.idx  blockCompressTestHelper.cpp.26A9C6F01B369212.idx  blockCompressTestHelper.h.A016F55C6E741775.idx  globals.cpp.D937CE2CA88EB07D.idx  globals.h.1E880CC30480C79B.idx  gtest-all.cc.B9FCC19BC64EBB81.idx  gtest-assertion-result.cc.D1C7FE793B1B44A6.idx  gtest-assertion-result.h.6EC231729DD0C44B.idx  gtest-death-test-internal.h.E973B6F701569CEB.idx  gtest-death-test.cc.2BC4D30A2D095165.idx  gtest-death-test.h.849754117BB1BC5F.idx  gtest-filepath.cc.B1C408DC13431E4D.idx  gtest-filepath.h.3D0812D73EB75B20.idx  gtest-internal-inl.h.E95B83A932F2392C.idx  gtest-internal.h.289062037A78CD78.idx  gtest-matchers.cc.A0C5D616E8E4BCF5.idx  gtest-matchers.h.8C39551965830E9F.idx  gtest-message.h.D622F09497BA8D6D.idx  (+35 more)
.github/workflows/: cmake-multi-platform.yml  cppcheck.yml
cores/: Cuboid.cpp  SafeInputTasks.cpp  SafeOutputTasks.cpp
globals/: globals.cpp
input/: readInput.h
output/: output.cpp
src/: .gitignore  CMakeLists.txt  Makefile  Readme.md  main.cpp  output_program  windows-toolchain.cmake
src/compressor/: BlockCompress.cpp  BlockCompress.h  Compressor.cpp  Compressor.h  LineCompress.cpp  PlaneCompress.cpp
src/cores/: Block.cpp  Block.h  Cuboid.h  SafeInputTasks.cpp  SafeInputTasks.h  SafeOutputTasks.cpp  SafeOutputTasks.h
src/globals/: globals.cpp  globals.h
src/input/: Buffer.cpp  Buffer.h  input.txt  input2.csv  main.cpp  readInput.cpp  readInput.h
src/multi-tasks-handling/: MultiThreadsHandler.cpp  MultiThreadsHandler.h
src/multi-threads-handling/: MultiThreadsHandler.cpp  MultiThreadsHandler.h  ThreadPool.h
src/output/: output.cpp  output.h
tests/: Readme.md  test_main.cpp
tests/integration/: Chunk.cpp  Chunk.h  InputTestHelper.h  IntegrationTestHelper.cpp  IntegrationTestHelper.h  IntergrationTestHelper.cpp  IntergrationTestHelper.h  debug.cpp  integrationValidTests.cpp  validTests.cpp
tests/integration/invalid_test_cases/: integration4_expected.txt
tests/integration/valid_test_cases/: _outcome.txt  bridge1_case.csv  bridge1_expected.txt  bridge2_case.csv  bridge2_expected.txt  debug_outcome.txt  fast_decompress.txt  input7_case.csv  input7_expected.txt  input8_expected.txt  input9_expected.txt  integration1_expected.txt  integration1_outcome.txt  integration2_case.csv  integration2_expected.txt  integration2_outcome.txt  integration3_expected.txt  integration3_outcome.txt  integration4_case.csv  integration5_expected.txt  plane1_compress_case.csv  plane2_compress_expected.txt  plane2_compress_outcome.txt  plane3_compress_expected.txt  plane3_compress_outcome.txt  plane4_compress_case.csv  plane4_compress_expected.txt  plane4_compress_outcome.txt  plane5_compress_case.csv  plane5_compress_expected.txt  plane5_compress_outcome.txt  plane_compress_case.csv  plane_compress_case1.csv  plane_compress_case2.csv  plane_compress_case3.csv  plane_compress_expected.txt  plane_compress_expected1.txt  plane_compress_expected2.txt  plane_compress_expected3.txt  plane_compress_expected4.txt  (+2 more)
tests/testcase/: TestingRecord.xlsx  testcase1.txt  testcase10.txt  testcase11.txt  testcase12.txt  testcase2.txt  testcase3.txt  testcase4.txt  testcase5.txt  testcase6.txt  testcase7.txt  testcase8.txt  testcase9.txt
tests/unit/compressor/blockCompress/: blockCompressTestHelper.cpp  blockCompressTestHelper.h  validTests.cpp
tests/unit/compressor/blockCompress/helperFunctionsTest/: cuboidsInSameAreaTest.cpp  divideTest.cpp  findAllMatchedTest.cpp  isAContainsBTest.cpp  isOverlappedTest.cpp  minusCuboidTest.cpp  retriveUniqueNonOverlapTest.cpp  transformToMapTest.cpp  unitTestHelper.cpp  unitTestHelpers.h
tests/unit/compressor/blockCompress/integrationSelfDebugging/: BlockCompressTest.cpp
tests/unit/compressor/blockCompress/valid_test_cases/: block10_case.txt  block10_expected.txt  block10_raw.txt  block11_case.txt  block11_expected.txt  block11_raw.txt  block12_case.txt  block12_expected.txt  block12_raw.txt  block13_case.txt  block13_expected.txt  block13_raw.txt  block1_case.txt  block1_expected.txt  block1_raw.txt  (+27 more)
tests/unit/compressor/lineCompress/: Helper.cpp  Helper.h  validTests.cpp
tests/unit/compressor/planeCompress/: planeCompressTestHelper.cpp  planeCompressTestHelper.h  validTests.cpp
tests/unit/output/: outputTest.cpp  readme.md
tests/unit/readInput/: InputTestHelper.cpp  InputTestHelper.h  inputTest.cpp  input_test.h  invalidTests.cpp  invalid_tests.cpp  test_main.cpp  validTests.cpp  valid_tests.cpp
tests/unit/readInput/invalid_test_cases/: input1_case.csv
tests/unit/readInput/test_cases/: input1_case.txt  input1_expected.txt  input2_case.txt
tests/unit/readInput/valid_test_cases/: input1_case.csv  input1_case.txt  input1_expected.txt  input2_case.csv  input2_case.txt  input2_expected.txt  input3_case.csv  input3_expected.txt  input4_case.csv  input4_expected.txt  input5_case.csv  input5_expected.txt  input6_case.csv  input6_expected.txt  input7_case.csv  input7_expected.txt  input8_case.csv  input8_expected.txt  input9_case.csv  input9_expected.txt  plane1_compress_case.csv  plane1_compress_expected.txt
(+42 files in other folders)
